# izzy-devices

./: README.md  pyproject.toml
docs/source/: conf.py
izzy_devices/: client.py
src/: __init__.py  client.py  server.py
